# yolov10_ros

./: .gitignore  CMakeLists.txt  Dockerfile  PREDEPLOYMENT_CHECKS.md  README.md  app.py  demo_kitti.py  docker-compose.yml  entrypoint.sh  package.xml  setup.py
config/: detector_params.yaml  lane_seg_params.yaml  light_classifier_params.yaml  sign_classifier_params.yaml  speed_limit_ocr_params.yaml
docs/: architecture.md  demo.md  docker.md  models.md  ocr_pipeline.md  ros_api.md
launch/: detector.launch  pipeline.launch  pipeline_d435.launch  pipeline_kitti.launch
msg/: ClassifiedLight.msg  ClassifiedLightArray.msg  ClassifiedSign.msg  ClassifiedSignArray.msg  Detection.msg  DetectionArray.msg  SpeedLimit.msg  SpeedLimitArray.msg
src/: detector_node.py  lane_seg_node.py  light_classifier_node.py  perception_viz_node.py  sign_classifier_node.py  speed_limit_ocr_node.py
src/yolov10_ros/: __init__.py  image_utils.py  twinlitenet.py  visualization.py
